--- a/qtify/src/components/Carousel/Carousel.module.css
+++ b/qtify/src/components/Carousel/Carousel.module.css
@@ -1,11 +1,9 @@
-.carouselContainer {
-    position: relative;
-    width: 100%;
-    padding: 10px 0;
+.carousel {
+
   }
   
-  .swiper-button-next,
-  .swiper-button-prev {
-    color: #000;
+  .carousel-item img {
+    object-fit: cover;
+    height: 100%; 
   }
   
