--- a/qtify/src/components/Carousel/Carousel.module.css
+++ b/qtify/src/components/Carousel/Carousel.module.css
@@ -1,9 +1,19 @@
 .carousel {
-
+    width: 100%;
+    margin: auto;
   }
   
-  .carousel-item img {
-    object-fit: cover;
-    height: 100%; 
+  .carouselItemContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    overflow: hidden;
   }
+  
+  .carouselItemContainer > div {
+    flex: 0 0 auto;
+    margin-right: 10px;
+  }
+  
   
